--- a/scss/components/__components-dir.scss
+++ b/scss/components/__components-dir.scss
@@ -38,6 +38,8 @@
 @import 'cp-author-info-box';
 @import 'cp-tab-menu';
 @import 'cp-post-author-info';
+@import 'cp-memory-post-form';
+@import 'cp-memory';
 
 
 
