--- a/scss/components/_cp-pagination.scss
+++ b/scss/components/_cp-pagination.scss
@@ -47,6 +47,8 @@
     }
     
     &--style-2 {
+        width: 100%;
+        margin-top: 30px;
         .pagination {
             .active {
                 background-color: $color-secondary;
