--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -21,7 +21,7 @@
 @import "lo-rating-list";
 @import "lo-working-steps";
 @import "lo-faq";
-@import "lo-contact-section";
+@import "lo-contact-section";   
 @import "lo-header-topbar";
 @import "lo-search-filter";
 @import "lo-counter";
@@ -41,5 +41,6 @@
 @import "lo-obituaries-details";
 @import "lo-tab-menu-section";
 @import "lo-tab-content";
+@import "lo-memory-book-content";
 
 
