--- a/scss/components/_cp-social-link.scss
+++ b/scss/components/_cp-social-link.scss
@@ -38,6 +38,20 @@
             color: $color-primary;
         }
     }
+
+    &--style-4 {
+        background-color: #014A4F;
+        color: #E6F0F1;
+        border: none;
+        i {
+            font-size: 17px;
+        }
+        
+        &:hover {
+            background-color: $color-white;
+            color: $color-primary;
+        }
+    }
 }
 
 
