--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -119,17 +119,37 @@
             z-index: -1;
             &:nth-child(1) {
                 left: 40px;
-                bottom: 0;
+                bottom: 90px;
             }
             &:nth-child(2) {
                 right: 15px;
-                bottom: -8px;
+                bottom: 82px;
             }
         }
     }
 
     &--style-1 {
+        padding-top: 0;   
+    }
+
+    &--style-2 {
         padding-top: 0;
+
+        .shape-parallax-list {
+            li {
+                position: absolute;
+                z-index: -1;
+                &:nth-child(1) {
+                    left: 40px;
+                    bottom: 0;
+                }
+                &:nth-child(2) {
+                    right: 15px;
+                    bottom: -8px;
+                }
+            }
+        }
+        
     }
 }
 
