--- a/assets/fontello-icon-webfont/css/rt-obituary-codes.css
+++ b/assets/fontello-icon-webfont/css/rt-obituary-codes.css
@@ -30,4 +30,6 @@
 .icon-image:before { content: '\e823'; } /* '' */
 .icon-video:before { content: '\e824'; } /* '' */
 .icon-share:before { content: '\e826'; } /* '' */
+.icon-icon-location-2:before { content: '\e827'; } /* '' */
+.icon-location-3:before { content: '\e828'; } /* '' */
 .icon-youtube:before { content: '\f315'; } /* '' */
