--- a/scss/layouts/_lo-working-steps.scss
+++ b/scss/layouts/_lo-working-steps.scss
@@ -17,7 +17,7 @@
                 width: 100%;
                 height: 110px;
                 position: absolute;
-                background-image: url("../../images/working-steps/dashed-line-shape.svg");
+                background-image: url("../images/working-steps/dashed-line-shape.svg");
                 transition: width 1.5s linear;
                 background-repeat: no-repeat;
                 z-index: -1;
