--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -102,12 +102,11 @@
                 color: #809597;
                 line-height: 36px;
 
-
                 i {
                     background-color: $color-secondary;
                     color: $color-white;
                     border-radius: 50%;
-                    padding: 6px 8px;
+                    padding: 6px;
                     margin-left: 10px;
                 }
             }
