--- a/scss/layouts/_lo-header.scss
+++ b/scss/layouts/_lo-header.scss
@@ -544,8 +544,8 @@ a.menu--link.second-level::after {
 
 .rt-slide-nav {
   position: absolute;
-  background: #000000;
-  opacity: 0.8;
+  background: $color-primary;
+  opacity: 0.95;
   width: 100%;
   left: 0;
   display: none;
