--- a/scss/layouts/_lo-blog-details.scss
+++ b/scss/layouts/_lo-blog-details.scss
@@ -30,6 +30,7 @@
                 margin-bottom: 25px;
                 ul.entry-meta {
                     gap: 30px;
+                    row-gap: 5px;
                     li, a {
                         color: $color-title;
                         font-size: 16px;
@@ -64,7 +65,11 @@
                     overflow: hidden;
                     padding: 20px 36px 30px 44px;
                     position: relative;
-                    margin: 0 30px 25px 30px;
+                    margin-bottom: 30px;
+                    
+                    @include media-only ('sm', min) {
+                        margin: 0 30px 25px 30px;
+                    }
 
                     i {
                         color: $color-primary;
