--- a/scss/layouts/_lo-sidebar-filter.scss
+++ b/scss/layouts/_lo-sidebar-filter.scss
@@ -120,7 +120,7 @@
     }
 
     .filter-btn-list {
-        padding-top: 30px;
+        padding: 30px 30px 0 30px;        
         border-top: 1px solid #DCE0E1;;
         gap: 10px;
         button {
