updated qc fixing

--- a/scss/components/_cp-memory-post-form.scss
+++ b/scss/components/_cp-memory-post-form.scss
@@ -48,6 +48,11 @@
             .icon-video {
                 margin-right: 14px;
             }
+            a {
+                &:hover {
+                    color: $color-primary;
+                }
+            }
         }
     }
 
