--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -101,13 +101,13 @@
                 border: none;
                 color: #809597;
                 line-height: 36px;
-
-                i {
+                gap: 12px;
+                .icon {
+                    width: 32px;
+                    height: 32px;
                     background-color: $color-secondary;
                     color: $color-white;
                     border-radius: 50%;
-                    padding: 6px;
-                    margin-left: 10px;
                 }
             }
         }
