--- a/scss/components/_cp-contact-form.scss
+++ b/scss/components/_cp-contact-form.scss
@@ -45,3 +45,19 @@
         }
     }
 }
+
+
+.contact-form-wrapper {
+    position: relative;
+    .shape-parallax-list {
+        li {
+            position: absolute;
+            z-index: -1;
+            &:nth-child(1) {
+                top: 0;
+                left: 0;
+                opacity: 0.1;
+            }
+        }
+    }
+}
