--- a/scss/layouts/_lo-app-download.scss
+++ b/scss/layouts/_lo-app-download.scss
@@ -50,6 +50,7 @@
     .title-wrapper {
         padding: 0;
         margin: 0;
+        // padding-left: 35px;
         .section-title {
             color: $color-white;
             font-size: 32px;
@@ -62,6 +63,18 @@
 
     &--style-1 {
         transform: translateY(-120px);
+
+        .title-wrapper {
+            @include media-only ('lg', min) {
+                padding-left: 35px;
+            }
+        }
+
+        .app-download-area {
+            @include media-only ('lg', min) {
+                padding-left: 15px;
+            }
+        }
     }
 
     &--style-2 {
